# MoneyMaker

./: .gitignore  CMakeLists.txt  moneymaker  player_save.json  tastatura.txt  test.db
.github/actions/process-artifacts/: action.yml
.github/workflows/: cmake.yml
scripts/: cmake.sh
src/: Achievement.cpp  Achievement.h  Achievement_Observer.h  Bancnota.cpp  Bancnota.h  BanknoteUpgrade.cpp  BanknoteUpgrade.h  DoubleTapUpgrade.cpp  DoubleTapUpgrade.h  Game.cpp  Game.h  JsonException.h  LevelUpgrade.cpp  LevelUpgrade.h  Observer.h  Player.cpp  Player.h  Reward.h  UltraUpgrade.cpp  UltraUpgrade.h  Upgrade.h  UpgradeException.h  main.cpp  moneymaker  sqlite_test.cpp
